--- a/index.html
+++ b/index.html
@@ -36,16 +36,19 @@
                 <h3 class="text-xl font-bold text-lime-600 mb-4">Inspections & Logs</h3>
                 <div class="flex flex-col space-y-3">
                     <a href="https://docs.google.com/spreadsheets/d/17bnFw5qOlWHzuvfudMR4rgolCwvOLlnTqfgr7BKCkyw/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="block w-full text-center bg-white border-2 border-cyan-700 text-gray-800 text-lg font-semibold py-3 px-4 rounded-lg transition duration-200 hover:bg-cyan-700 hover:text-white">
-                        Telehandler
+                        WDC Telehandler
                     </a>
                     <a href="https://docs.google.com/spreadsheets/d/1ydvhT4bKrTPJjbBl5COABFQfIUyr6qpySqL8GZefc3g/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="block w-full text-center bg-white border-2 border-cyan-700 text-gray-800 text-lg font-semibold py-3 px-4 rounded-lg transition duration-200 hover:bg-cyan-700 hover:text-white">
-                        Jensen
+                        Jensen Telehandler
                     </a>
                     <a href="https://docs.google.com/spreadsheets/d/1_TNOO0q8YEBsNiLNLXsfBgm51gDNXlXWZiWs56W_QlY/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="block w-full text-center bg-white border-2 border-cyan-700 text-gray-800 text-lg font-semibold py-3 px-4 rounded-lg transition duration-200 hover:bg-cyan-700 hover:text-white">
-                        MEWP
+                        MEWPs
                     </a>
                     <a href="https://docs.google.com/spreadsheets/d/1N12zqA7TLbH15yZxwpWHf-cIWW50ffP6Ah9eQEhRoKw/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="block w-full text-center bg-white border-2 border-cyan-700 text-gray-800 text-lg font-semibold py-3 px-4 rounded-lg transition duration-200 hover:bg-cyan-700 hover:text-white">
-                        Overlapping Zone Records
+                        Crane Overlapping Zone Records
+                    </a>
+                    <a href="https://docs.google.com/spreadsheets/d/1KCIxyHmfVoYnibfjnvY8rvYqwJowEKj2UqdU6dK17FM/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="block w-full text-center bg-white border-2 border-cyan-700 text-gray-800 text-lg font-semibold py-3 px-4 rounded-lg transition duration-200 hover:bg-cyan-700 hover:text-white">
+                        Crane Cold Weather
                     </a>
                 </div>
             </div>
